chore: webhooks caching and type filtering
